<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/scrim"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/basil_green_100"
        android:alpha=".4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="1"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="108dp"
        android:visibility="invisible"
        tools:visibility="visible"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recipeHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/panel_height"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/title"
            tools:text="@tools:sample/lorem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RecipeHeader"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="@dimen/margin_mid"
            android:paddingEnd="@dimen/margin_mid"
            android:paddingTop="42dp"
            android:paddingBottom="@dimen/margin_very_big" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/arrow"
            android:layout_marginTop="@dimen/margin_big"
            style="@style/Divider"/>


        <ImageButton
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:icon="@drawable/vd_arrow_down"
            android:src="@drawable/vd_arrow_down"
            android:tint="@color/basil_green_800"
            android:background="@null"
            android:scaleX="2"
            tools:alpha="0"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_mid"
        android:layout_marginEnd="@dimen/margin_mid"
        android:layout_marginBottom="@dimen/margin_mid"
        app:layout_constraintBottom_toBottomOf="@+id/scrim"
        app:layout_constraintEnd_toEndOf="@+id/scrim"
        app:layout_constraintStart_toStartOf="@+id/scrim"
        app:layout_constraintTop_toBottomOf="@+id/recipeHeader"
        app:fontFamily="@font/lekton"
        tools:text="@tools:sample/lorem"
        android:textColor="@color/basil_green_800"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/caloriesHeader"
        android:text="@string/calories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/scrim"
        app:layout_constraintStart_toStartOf="@+id/scrim"
        app:layout_constraintEnd_toStartOf="@+id/peopleHeader"
        android:layout_marginTop="@dimen/margin_big"
        style="@style/RecipeDescriptionHeader"/>

    <TextView
        android:id="@+id/peopleHeader"
        android:text="@string/people"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/caloriesHeader"
        app:layout_constraintStart_toEndOf="@+id/caloriesHeader"
        app:layout_constraintEnd_toEndOf="@id/scrim"
        style="@style/RecipeDescriptionHeader"/>

    <TextView
        android:id="@+id/calories"
        android:text="465"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/RecipeDescription"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/caloriesHeader"
        app:layout_constraintStart_toStartOf="@+id/caloriesHeader"
        app:layout_constraintEnd_toEndOf="@+id/caloriesHeader"
        android:layout_marginTop="@dimen/margin_small" />

    <TextView
        android:id="@+id/people"
        android:text="4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/RecipeDescription"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/calories"
        app:layout_constraintStart_toStartOf="@+id/peopleHeader"
        app:layout_constraintEnd_toEndOf="@+id/peopleHeader" />

    <View
        android:id="@+id/midDivider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@+id/calories"
        app:layout_constraintStart_toStartOf="@+id/scrim"
        app:layout_constraintEnd_toEndOf="@+id/scrim"
        android:layout_marginTop="@dimen/margin_big"
        style="@style/Divider"/>

    <View
        android:id="@+id/bottomDivider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toTopOf="@+id/ingredients"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/basil_green_100"/>

    <TextView
        android:id="@+id/ingredients"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/ingredients"
        android:gravity="center"
        android:textAllCaps="true"
        app:fontFamily="@font/montserrat"
        android:textColor="@color/basil_green_800"
        style="@style/TextAppearance.MaterialComponents.Button"/>


</androidx.constraintlayout.widget.ConstraintLayout>